<resources>
    <string name="app_name">Airmart</string>
    <string name="title_home">Home</string>
    <string name="title_post">Post</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>


    <string name="cat_card_title">Cards</string>
    <string name="cat_card_draggable_card">Draggable Card</string>
    <string name="cat_card_selection_mode">Selectable Cards</string>
    <string name="cat_card_selectable_item_title">Message</string>
    <string name="cat_card_states">Card States</string>
    <string name="cat_card_list" translatable="false">Card List With Drag-and-Drop</string>
    <string name="cat_card_draggable_card_content">This is a draggable Card.</string>
    <string name="cat_card_states_card_content">This demo shows the different states on a card.</string>
    <string name="cat_card_state_hovered">Hovered</string>
    <string name="cat_card_state_pressed">Pressed</string>
    <string name="cat_card_state_none">None</string>
    <string name="cat_card_checkable_card">This is a checkable Card</string>
    <string name="cat_card_m1_section_title">Material 1 CardView</string>
    <string name="cat_card_description">
        Cards represent entry points into deeper levels of detail or navigation, such as an album in
        Music or an upcoming vacation in Trips. They can be used in a grid, carousel, or feed to
        contain groups of individual packaged information.
    </string>
    <string name="cat_card_spacing_desc">
        Cards on mobile default to 8dp margins. layout_margin needs to be set directly on a View in its
        layout and will not work when included as part of a style.
    </string>
    <string name="cat_card_clickable_desc">
        Cards can be clickable.
    </string>
    <string name="cat_card_elevation_desc">Cards have 1dp elevation.</string>
    <string name="cat_card_m1_desc">
        CardView from the Support Library works side-by-side with MaterialCardView. These cards default
        to Material 1 styles and support fewer style attributes than MaterialCardView.
    </string>
    <string name="cat_card_style_only_desc">
        MaterialCardView uses the correct styles by default and makes use of additional style attributes
        that are not provided in CardView. If you do not need to use the new style attributes, you can
        use MaterialCardView in your layout, or apply a style tag to a CardView. We recommend using
        the MaterialCardView class for the latest Material designs and maximum flexibility in your UI.
    </string>
    <string name="cat_card_select">Select a state</string>
    <string name="cat_card_selectable_content">
        Lorem ipsum dolor sit amet, nec no nominavi scaevola. Per et sint sapientem, nobis perpetua salutandi mei te.
        Quo tamquam probatus reprehendunt in. Eos esse purto eruditi ea. Enim tation persius ut sea, eos ad consul
        populo.
        Ne eum solet altera. Cibo eligendi et est, electram theophrastus te vel eu.
    </string>

    <!-- Rich Media Demo Strings -->
    <string name="cat_card_rich_media_demo">Rich Media Cards</string>
    <string name="cat_card_rich_media_sample_1">Sample #1</string>
    <string name="cat_card_rich_media_sample_2">Sample #2</string>
    <string name="cat_card_rich_media_sample_3">Sample #3</string>
    <string name="cat_card_rich_media_view_overline">Title goes here</string>
    <string name="cat_card_rich_media_view_title">Title goes here</string>
    <string name="cat_card_rich_media_title_view_description">Card Title</string>
    <string name="cat_card_rich_media_view_subtitle">Subtitle goes here</string>
    <string name="cat_card_rich_media_subtitle_view_description">Card Subtitle</string>
    <string name="cat_card_rich_media_view_secondary_line_text">Secondary line text Lorem ipsum dolor sit amet, nec no
        nominavi scaevola. Per et sint sapientem, nobis perpetua salutandi mei te.
    </string>
    <string name="cat_card_rich_media_logo_view_description">Card Logo</string>
    <string name="cat_card_rich_media_image_view_description">Card Image</string>
    <string name="cat_card_rich_media_rating_text">4.5 (413)</string>
    <string name="cat_card_rich_media_rating_view_description">Card Rating</string>
    <string name="cat_card_rich_media_chip_title_1">Item 1</string>
    <string name="cat_card_rich_media_chip_title_2">Item 2</string>
    <string name="cat_card_rich_media_chip_title_3">Item 3</string>
    <string name="cat_card_rich_media_chip_title_4">Item 4</string>
    <string name="cat_card_rich_media_action_1">Action 1</string>
    <string name="cat_card_rich_media_action_2">Action 2</string>

    <string description="A description of an action that a user of an accessibility service can perform to move the card to the top left corner of the screen. [CHAR LIMIT=25]"
            name="cat_card_action_move_top_left">Move to top left
    </string>
    <string description="A description of an action that a user of an accessibility service can perform to move the card to the top right corner of the screen. [CHAR LIMIT=25]"
            name="cat_card_action_move_top_right">Move to top right
    </string>
    <string description="A description of an action that a user of an accessibility service can perform to move the card to the bottom left corner of the screen. [CHAR LIMIT=25]"
            name="cat_card_action_move_bottom_left">Move to bottom left
    </string>
    <string description="A description of an action that a user of an accessibility service can perform to move the card to the bottom right corner of the screen. [CHAR LIMIT=25]"
            name="cat_card_action_move_bottom_right">Move to bottom right
    </string>
    <string description="A description of an action that a user of an accessibility service can perform to move the card to the center of the screen. [CHAR LIMIT=25]"
            name="cat_card_action_move_center">Move to center
    </string>
    <string name="hint_enter_message">Enter a message</string>
</resources>
