<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="commentClickListener"
                type="android.view.View.OnClickListener"/>
        <variable
                name="product"
                type="com.android.airmart.data.entity.Product"/>

    </data>
    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mtrl_card_spacing"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{commentClickListener}"
                    android:minHeight="@dimen/cat_card_rich_media_demo_min_height">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/cat_card_double_spacing"
                            android:paddingBottom="@dimen/cat_card_single_spacing">

                        <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginEnd="@dimen/cat_card_single_spacing"
                                android:layout_marginRight="@dimen/cat_card_single_spacing"
                                android:contentDescription="@string/cat_card_rich_media_logo_view_description"
                                app:srcCompat="@drawable/ic_profile_black_24dp"/>

                        <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.0"
                                android:layout_marginStart="@dimen/cat_card_single_spacing"
                                android:layout_marginLeft="@dimen/cat_card_single_spacing"
                                android:orientation="vertical">
                            <TextView
                                    style="?attr/textAppearanceHeadline6"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/cat_card_rich_media_title_view_description"
                                    android:text="@{product.title}"/>

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/cat_card_single_spacing"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    android:text="@{`ETB `+product.price}"/>
                        </LinearLayout>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="match_parent"
                            android:layout_height="194dp"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/cat_card_rich_media_image_view_description"
                            app:backgroundTint="@color/mtrl_on_surface_emphasis_medium"
                            app:backgroundTintMode="add"
                            app:srcCompat="@drawable/ic_broken_image_black_24dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/cat_card_double_spacing"
                            android:maxLines="5"
                            android:text="@{product.description}"/>


                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/cat_card_single_spacing"
                            android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                                app:icon="@drawable/ic_interested_black_24dp"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                                android:text="Interested"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/cat_card_single_spacing"
                                android:layout_marginRight="@dimen/cat_card_single_spacing"

                        />
                        <com.google.android.material.button.MaterialButton
                                app:icon="@drawable/ic_insert_comment_black_24dp"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                                android:onClick="@{commentClickListener}"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                app:iconGravity="textStart"
                                android:layout_marginEnd="@dimen/cat_card_single_spacing"
                                android:layout_marginRight="@dimen/cat_card_single_spacing"


                        />
                        <com.google.android.material.button.MaterialButton
                                app:icon="@drawable/ic_contact_mail_black_24dp"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                app:iconGravity="textStart"
                                android:layout_marginEnd="@dimen/cat_card_single_spacing"
                                android:layout_marginRight="@dimen/cat_card_single_spacing"


                        />


                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


    </androidx.core.widget.NestedScrollView>

</layout>
